<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/app_name"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textSize="30sp"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/start"
                android:text="@string/start"
                android:gravity="center"
                android:textSize="30sp"
                android:textAllCaps="false"
                android:fontFamily="sans-serif"
                android:background="@color/colorPrimary"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/mandalaButton"
                android:text="@string/mandala_view"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textSize="30sp"
                android:textAllCaps="false"
                android:fontFamily="sans-serif"
                android:background="@color/colorPrimary"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/treeButton"
                android:text="@string/tree_view"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textSize="30sp"
                android:textAllCaps="false"
                android:fontFamily="sans-serif"
                android:background="@color/colorPrimary"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/randomButton"
                android:text="@string/random_suggestion"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textSize="30sp"
                android:textAllCaps="false"
                android:fontFamily="sans-serif"
                android:background="@color/colorPrimary"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/suggest"
                android:text="@string/suggest"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textSize="30sp"
                android:textAllCaps="false"
                android:fontFamily="sans-serif"
                android:background="@color/colorPrimary"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/settingsButton"
                android:text="@string/settings"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textSize="30sp"
                android:textAllCaps="false"
                android:fontFamily="sans-serif"
                android:background="@color/colorPrimary"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>