<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/colorPrimaryDark"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/component_a"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        <TextView
                android:text="@string/component_b"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <me.antonio.noack.elementalcommunity.OneElement
                android:id="@+id/first"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        <me.antonio.noack.elementalcommunity.OneElement
                android:id="@+id/second"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <EditText
            android:id="@+id/name"
            android:hint="@string/result_name"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <me.antonio.noack.elementalcommunity.Colors
            android:id="@+id/colors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:id="@+id/submit"
                android:background="@color/colorPrimary"
                android:text="@string/submit"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

        <View android:layout_width="5dp" android:layout_height="5dp"/>

        <Button
                android:id="@+id/cancel"
                android:background="@color/colorPrimary"
                android:text="@string/cancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

        <View android:layout_width="5dp" android:layout_height="5dp"/>

        <Button
                android:id="@+id/next"
                android:background="@color/colorPrimary"
                android:text="@string/skip_that"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>