<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/colorPrimaryDark"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/result_unknown_wanna_add_your_own"
                android:gravity="center"
                android:textSize="20sp"
                android:padding="5dp"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:text="@string/community_suggestions"
                android:id="@+id/title2"
                android:gravity="center"
                android:textSize="17sp"
                android:padding="5dp"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:id="@+id/suggestions"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">


            </LinearLayout>

        </HorizontalScrollView>

        <EditText
                android:id="@+id/name"
                android:hint="@string/result_name"
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <me.antonio.noack.elementalcommunity.Colors
                android:id="@+id/colors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <Button
                    android:id="@+id/submit"
                    android:background="@color/colorPrimary"
                    android:text="@string/submit"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>

            <View android:layout_width="5dp" android:layout_height="5dp"/>

            <Button
                    android:id="@+id/cancel"
                    android:background="@color/colorPrimary"
                    android:text="@string/cancel"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>

        </LinearLayout>



        <!--

            todo query other suggestions for this recipe
            todo upvote / downvote



        -->

    </LinearLayout>

</ScrollView>