<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/colorPrimaryDark"
              android:padding="10dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:id="@+id/title"
            android:textSize="30sp"
            android:padding="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/please_select_the_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/path"
            android:textSize="17sp"
            android:padding="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <ScrollView
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="0dp">

        <me.antonio.noack.elementalcommunity.PatchesView
                android:id="@+id/fileList"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

        </me.antonio.noack.elementalcommunity.PatchesView>

    </ScrollView>

    <Button
            android:id="@+id/select"
            android:textAllCaps="false"
            android:fontFamily="sans-serif"
            android:text="@string/save_progress_to_name"
            android:gravity="center"
            android:textSize="24sp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorPrimaryText"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/back"
            android:textAllCaps="false"
            android:fontFamily="sans-serif"
            android:text="@string/cancel"
            android:gravity="center"
            android:textSize="24sp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorPrimaryText"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>