<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/colorPrimaryDark"
              android:padding="10dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <Button
            android:id="@+id/copy"
            android:textAllCaps="false"
            android:fontFamily="sans-serif"
            android:layout_marginTop="10dp"
            android:text="@string/override_old_data"
            android:gravity="center"
            android:textSize="30sp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorPrimaryText"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/merge"
            android:textAllCaps="false"
            android:fontFamily="sans-serif"
            android:layout_marginTop="10dp"
            android:text="@string/merge_achievements"
            android:gravity="center"
            android:textSize="30sp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorPrimaryText"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/back"
            android:textAllCaps="false"
            android:fontFamily="sans-serif"
            android:layout_marginTop="10dp"
            android:text="@string/cancel"
            android:gravity="center"
            android:textSize="30sp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorPrimaryText"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>